<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/dropDownCategoryName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideStartAddLocation"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent=".75"
        app:layout_constraintHeight_percent=".07" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputHomeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropDownCategoryName"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".75" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHomeItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputHomeQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputHomeName"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".75" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHomeItemQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_item_quantity"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddHomeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_home_button"
        app:layout_constraintTop_toBottomOf="@id/textInputHomeQuantity"
        app:layout_constraintBottom_toTopOf="@id/guideEndAddLocation"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEndAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStartAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />

</androidx.constraintlayout.widget.ConstraintLayout>